--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<%= render "hero" %>
-<%= render "content" %>
-<%= render "footer" %>
+<%= render "component/hero" %>
+<%= render "component/content" %>
+<%= render "component/footer" %>
