--- a/app/views/component/_hero.html.erb
+++ b/app/views/component/_hero.html.erb
@@ -1,13 +1,49 @@
 <section class="body-font filter drop-shadow-lg">
-    <div class="container mx-auto flex px-5 pb-64 pt-28 items-center justify-center flex-col sm:bg-cover bg-no-repeat bg-center bg-fixed" style="background-image: url(/assets/bg-hero-record.jpg);">    
-        <div class="text-center lg:w-2/3 w-full bg-gradient-to-b from-transparent via-gray-300 rounded">
-            <h1 class="title-font text-4xl sm:text-6xl md:text-7xl mb-4 font-medium text-yellow-200 font-black">Gestion Humana APP</h1>
-            <p class="mb-8 leading-relaxed text-white sm:text-xl italic p-4">
-                Para el bienestar de nuestros colaboradores. Hemos querido dar el paso a la era digital, ahora tendras un portal en el cual estamos mas cerca de ti.
-            </p>
-            <div class="flex justify-center">
-                <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Leer mas...</button>
+    <div class="z-30 relative items-center justify-center w-full h-full overflow-auto">
+        <div class="inset-0 h-screen bg-cover bg-center" style="background-image: url('/assets/bg-hero-record.jpg');"></div>
+    
+        <div class="absolute inset-0  z-30  flex flex-col items-center justify-center">
+
+            <div class="shadow-2xl rounded-lg w-4/5 h-96 bg-cover bg-center" style="background-image: url('/assets/bg-hero-record.jpg');">
+
+                <div class="grid grid-cols-12 gap-1 bg-gray-900 bg-opacity-25 rounded filter drop-shadow-lg">
+
+                    <div class="relative my-6 px-8 col-span-12 sm:col-span-12 md:col-span-7 lg:col-span-7 xxl:col-span-7 ">
+                        <div class="py-20 px-5 mx-2">
+                            <p class="italic text-yellow-100 text-xl md:text-4xl lg:text-6xl uppercase text-center font-semibold ">
+                                GESTION HUMANA APP
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-span-12 sm:col-span-12 md:col-span-5 lg:col-span-5 xxl:col-span-5">
+                        <div class="relative bg-yellow-900 h-full md:h-96 w-full bg-opacity-50 rounded-tr-lg rounded-br-lg">
+                            <div class="p-8">
+                                <p class="text-white text-xs md:text-sm lg:text-xl mb-4">
+                                    Para el bienestar de nuestros colaboradores. 
+                                    Hemos querido dar el paso a la era digital, ahora tendras un portal en el cual estamos mas cerca de ti.
+                                </p>
+                                <p class="text-white text-xs md:text-sm lg:text-xl mb-4">
+                                    Con el fin de poder agilizar tramites relacionados con nuestra area, tendras la comodidad
+                                    desde tu celular, tablet o computador realizar solicitudes.
+                                </p>
+                                <div class="bottom-0 absolute p-2 right-0">
+                                    <button class="opacity-75 bg-yellow-100 hover:bg-yellow-600 hover:text-white text-sm font-bold py-2 px-4 rounded inline-flex items-center">
+                                        <span>DESCARGAR FORMATO</span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10" />
+                                        </svg>
+                                    </button> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
+
         </div>
     </div>
 </section>
+
