Se cambia el texto descriptivo

--- a/app/views/cards/_cardvacaciones.html.erb
+++ b/app/views/cards/_cardvacaciones.html.erb
@@ -17,9 +17,9 @@
             <div class="p-8 md:pr-18 md:pl-14 md:py-12 mx-2 md:mx-0 h-full bg-white rounded-lg md:rounded-none md:rounded-l-lg shadow-xl md:shadow-none">
                 <h4 class="hidden md:block text-xl text-gray-400">Tramitar</h4>
                 <h3 class="hidden md:block font-bold text-2xl text-gray-700">VACACIONES</h3>
-                <p class="text-gray-600 text-justify">Necesitas tramitar tus vaciones o conocer cuando se vencen. podemos ayudarte con eso, solo llena el formulario.</p>
+                <p class="text-gray-600 text-justify">olicitar tus vacaciones jamás fue tan fácil como ahora, solo debes realizar click en el botón de solicitud y completar la información requerida.</p>
                 <a class="flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900" href="">
-                    <span>Conocer más de vacaciones</span>
+                    <span>Solicitar vacaciones</span>
                     <span class="text-xs ml-1">&#x279c;</span>
                 </a>
             </div>
