Se cambia el texto descriptivo

--- a/app/views/cards/_cardhoras.html.erb
+++ b/app/views/cards/_cardhoras.html.erb
@@ -17,7 +17,10 @@
             <div class="p-8 md:pr-18 md:pl-14 md:py-12 mx-2 md:mx-0 h-full bg-white rounded-lg md:rounded-none md:rounded-l-lg shadow-xl md:shadow-none">
                 <h4 class="hidden md:block text-xl text-gray-400">Tramitar</h4>
                 <h3 class="hidden md:block font-bold text-2xl text-gray-700">HORAS EXTRAS</h3>
-                <p class="text-gray-600 text-justify">Aqui podras ingresar tus horas extras. por que nos vimos a la necesidad de agilizar este proceso.</p>
+                <p class="text-gray-600 text-justify">
+                    En hora buena, ahora puedes reportar las horas extras de tu equipo de trabajo solo en un click, 
+                    solo debes realizar seleccionar el botón de solicitud y completar la información requerida.
+                </p>
                 <a class="flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900" href="">
                     <span>Conocer más de horas extras</span>
                     <span class="text-xs ml-1">&#x279c;</span>
