Se estilizan el index y las cards, se coloca imagen de fondo en el hero

--- a/app/views/component/_content.html.erb
+++ b/app/views/component/_content.html.erb
@@ -1,9 +1,9 @@
-<section class="text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto bg-green-200 bg-opacity-25">
+<section class="text-gray-600 body-font bg-gray-200 bg-opacity-75">
+    <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-20">
             <h2 class="text-xs text-red-500 tracking-widest font-medium title-font mb-1">Somos uno... Somos RECORD</h2>
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Nuestros Servicios a la Mano</h1>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Por que hemos querido dar el paso a la era digital, ahora encontraras nuestros servicios mas facil. Puedes realizar peticiones de cartas laborales, permisos, conocer y tramitar tus vaciones y muchas cosas mas.</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-gray-800">Por que hemos querido dar el paso a la era digital, ahora encontraras nuestros servicios mas facil. Puedes realizar peticiones de cartas laborales, permisos, conocer y tramitar tus vaciones y muchas cosas mas.</p>
         </div>
         <div class="flex flex-wrap">
             
