--- a/app/views/component/_hero.html.erb
+++ b/app/views/component/_hero.html.erb
@@ -1,11 +1,11 @@
 <section class="body-font filter drop-shadow-lg">
     <div class="z-30 relative items-center justify-center w-full h-full overflow-auto">
-        <div class="inset-0 h-screen bg-cover bg-center" style="background-image: url('/assets/web.png');"></div>
-        <div class="absolute inset-0 z-20 flex items-center justify-center h-screen w-full bg-gray-900 bg-opacity-75"></div>
+        <div class="inset-0 h-screen bg-cover bg-center bg-red-400"></div>
+        <div class="absolute inset-0 z-20 flex items-center justify-center h-screen w-full bg-gray-900 bg-opacity-75"  style="background-image: url('/assets/bg-pp.PNG');"></div>
     
         <div class="absolute inset-0 z-30 flex flex-col items-center justify-center">
 
-            <div class="shadow-2xl rounded-lg w-4/5 h-96 bg-cover bg-center" style="background-image: url('/assets/web.png');">
+            <div class="shadow-2xl rounded-lg w-4/5 h-96 bg-cover bg-center" style="background-image: url('/assets/bg-pp.PNG');">
 
                 <div class="grid grid-cols-12 gap-1 bg-gray-900 bg-opacity-25 rounded filter drop-shadow-lg">
 
