--- a/app/views/cards/_cardpermisos.html.erb
+++ b/app/views/cards/_cardpermisos.html.erb
@@ -1,9 +1,9 @@
 <div class="container mx-auto my-5">
 
-    <div class="relative rounded-lg flex flex-col md:flex-row items-center md:shadow-xl md:h-72 mx-2">
+    <div class="relative rounded-lg flex flex-col md:flex-row items-center md:shadow-xl md:h-72 mx-2 filter drop-shadow-lg shadow-inner">
 
         <div class="z-0 order-1 md:order-2 relative w-full md:w-2/5 h-80 md:h-full overflow-hidden rounded-lg md:rounded-none md:rounded-r-lg">
-            <div class="absolute inset-0 w-full h-full object-fill object-center bg-blue-400 bg-opacity-30 bg-cover bg-bottom" style="background-image: url('/assets/incapacidades.png'); background-blend-mode: multiply;"></div>
+            <div class="absolute inset-0 w-full h-full object-fill object-center bg-gray-200 bg-opacity-30 bg-cover bg-bottom" style="background-image: url('/assets/inca.png'); background-blend-mode: multiply;"></div>
             <div class="md:hidden absolute inset-0 h-full p-6 pb-6 flex flex-col-reverse justify-start items-start bg-gradient-to-b from-transparent via-transparent to-gray-900">
                 <h3 class="w-full font-bold text-2xl text-white leading-tight mb-2">PERMISOS LABORALES</h3>
                 <h4 class="w-full text-xl text-gray-100 leading-tight">Tramitar</h4>
