--- a/app/views/vacation/new.html.erb
+++ b/app/views/vacation/new.html.erb
@@ -3,12 +3,12 @@
         <div class="bg-gradient-to-t from-red-300 to-red-500 rounded-2xl text-white p-8 text-center h-72 max-w-sm md:max-w-3xl lg:max-w-5xl xl:max-w-6xl mx-auto shadow-2xl">
             <h1 class="text-3xl mb-3">Bienvenido</h1>
             <p class="text-sm md:text-lg">
-                Este formulario esta diseñado con el fin de poder ayudarte con el tramite de tus permisos,
+                Este formulario esta diseñado con el fin de poder ayudarte con el tramite de tus vacaciones,
                 el cual llenaras segun tu requerimiento. Cualquier informacion por favor llamar a la extencion 211.
             </p>
         </div>
         <div class="bg-white py-8 px-10 text-center rounded-md shadow-lg transform -translate-y-20 sm:-translate-y-24 max-w-xs md:max-w-2xl lg:max-w-4xl xl:max-w-5xl mx-auto">
-            <h2 class="font-semibold text-2xl mb-6 text-red-500">Formulario de permisos</h2>        
+            <h2 class="font-semibold text-2xl mb-6 text-red-500">Formulario Vacaciones</h2>        
                 <div class="bg-white shadow rounded-lg p-6 m-2">
                     <%= form_for :work do |f| %>
                         <div class="grid lg:grid-cols-1 gap-6 font-bold">
@@ -18,7 +18,7 @@
                             <div class="border-2 focus-within:border-red-500 focus-within:text-gray-500 transition-all duration-500 relative rounded p-1">
                                 <div class="-mt-4 absolute tracking-wider px-1 uppercase text-xs">
                                     <p>
-                                        <%= f.label :Cedula , class: "bg-white text-red-400 px-1" %>
+                                        <%= f.label :Cedula , class: "bg-white text-red-400 px-1" %><br>
                                     </p>
                                 </div>
                                 <p>    
@@ -37,7 +37,7 @@
                             <div class="border-2 focus-within:border-red-500 focus-within:text-gray-500 transition-all duration-500 relative rounded p-1">
                                 <div class="-mt-4 absolute tracking-wider px-1 uppercase text-xs">
                                     <p>
-                                        <%= f.label :Nombres, class: "bg-white text-red-400 px-1" %>
+                                        <%= f.label :Nombres, class: "bg-white text-red-400 px-1" %><br>
                                     </p>
                                 </div>
                                 <p>    
@@ -48,7 +48,7 @@
                             <div class="border-2 focus-within:border-red-500 focus-within:text-gray-500 transition-all duration-500 relative rounded p-1">
                                 <div class="-mt-4 absolute tracking-wider px-1 uppercase text-xs">
                                     <p>
-                                        <%= f.label :Apellidos, class: "bg-white text-red-400 px-1" %>
+                                        <%= f.label :Apellidos, class: "bg-white text-red-400 px-1" %><br>
                                     </p>
                                 </div>
                                 <p>    
@@ -59,7 +59,7 @@
                             <div class="border-2 focus-within:border-red-500 focus-within:text-gray-500 transition-all duration-500 relative rounded p-1">
                                 <div class="-mt-4 absolute tracking-wider px-1 uppercase text-xs">
                                     <p>
-                                        <%= f.label :Celular, class: "bg-white text-red-400 px-1" %>
+                                        <%= f.label :Celular, class: "bg-white text-red-400 px-1" %><br>
                                     </p>
                                 </div>
                                 <p>    
@@ -78,7 +78,7 @@
                             <div class="border-2 focus-within:border-red-500 focus-within:text-gray-500 transition-all duration-500 relative rounded p-1">
                                 <div class="-mt-4 absolute tracking-wider px-1 uppercase text-xs">
                                     <p>
-                                        <%= f.label :Email, class: "bg-white text-red-400 px-1" %>
+                                        <%= f.label :Email, class: "bg-white text-red-400 px-1" %><br>
                                     </p>
                                 </div>
                                 <p>    
@@ -95,11 +95,11 @@
                             <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su certificación.</h2>
 
                             <div class="grid lg:grid-cols-2 gap-6">
-                                <%= select_tag(:city_id, options_for_select([['Sin titulo', 1], ['Señor.', 2], ['Señora.', 3], ['Señores.', 4]]), class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-15 pl-5 pr-10 hover:border-gray-400 focus:outline-none") %>
+                                <%= select_tag(:city_id, options_for_select([['Sin titulo', 1], ['Señor.', 2], ['Señora.', 3], ['Señores.', 4]]), class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer ") %>
                                 <div class="border-2 focus-within:border-red-500 focus-within:text-gray-500 transition-all duration-500 relative rounded p-1">
                                     <div class="-mt-4 absolute tracking-wider px-1 uppercase text-xs">
                                         <p>
-                                            <%= f.label :Titulo, class: "bg-white text-red-400 px-1" %>
+                                            <%= f.label :Titulo, class: "bg-white text-red-400 px-1" %><br>
                                         </p>
                                     </div>
                                     <p>    
@@ -108,29 +108,20 @@
                                 </div>
                             </div>
 
-                            <div class="border-t mt-6 pt-3"></div>
-                            <h2 class="italic text-sm md:text-lg mb-6 text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su certificación.</h2>    
-                            
-                            
-                                <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-red-400">
-                                    <div class="flex justify-center">
-                                        <%= f.label :TipoContrato, class: "mr-4" %>
-                                        <%= f.check_box :TipoContrato, class: "w-7 h-7" %>
-                                    </div>
-                                    <div class="flex justify-center">
-                                        <%= f.label :Salario, class: "mr-4" %>
-                                        <%= f.check_box :Salario, class: "w-7 h-7" %>
-                                    </div>
-                                    <div class="flex justify-center">
-                                        <%= f.label :Funciones, class: "mr-4" %>
-                                        <%= f.check_box :Funciones, class: "w-7 h-7" %>
-                                    </div>
-                                    <div class="flex justify-center">
-                                        <%= f.label :TiempoLaboral, class: "mr-4" %>
-                                        <%= f.check_box :TiempoLaboral, class: "w-7 h-7" %>
-                                    </div>
-                                </div>
                         </div>
+
+                        <div class="border-t mt-6 pt-3"></div>
+                        <h2 class="italic text-sm md:text-lg mb-6 text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su certificación.</h2>    
+                        
+                        <div class="relative rounded p-1">
+                            <div class="-mt-4 absolute px-1 uppercase text-xs">
+                                <p>
+                                    <%= f.label :Email, class: "bg-white text-red-400" %><br>
+                                    <%= f.check_box :Email, class: "" %>
+                                </p>
+                            </div>
+                        </div>
+                        
 
                         <div class="border-t mt-6 pt-3">
                             <p>
