Se coloca estatica la imagen de hero

--- a/app/views/component/_hero.html.erb
+++ b/app/views/component/_hero.html.erb
@@ -1,7 +1,7 @@
 <section class="body-font filter drop-shadow-lg">
     <div class="z-30 relative items-center justify-center w-full h-full overflow-auto">
         <div class="inset-0 h-screen bg-cover bg-center bg-red-400"></div>
-        <div class="absolute inset-0 z-20 flex items-center justify-center h-screen w-full bg-gray-900 bg-opacity-75"  style="background-image: url('/assets/bg-pp.PNG');"></div>
+        <div class="absolute inset-0 z-20 flex items-center justify-center h-screen w-full bg-gray-900 bg-opacity-75 bg-fixed"  style="background-image: url('/assets/bg-pp.PNG');"></div>
     
         <div class="absolute inset-0 z-30 flex flex-col items-center justify-center">
 
