Se corrige texto del formulario certificado laboral

--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -92,7 +92,7 @@
 
                             <div class="border-t pt-1"></div>
 
-                            <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su certificación.</h2>
+                            <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuanta su necesidad, seleccione a quien quiere que sea dirigida la carta. por omision sera "A quien le interese."</h2>
 
                             <div class="grid lg:grid-cols-2 gap-6">
                                 <%= select_tag(:city_id, options_for_select([['Sin titulo', 1], ['Señor.', 2], ['Señora.', 3], ['Señores.', 4]]), class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-15 pl-5 pr-10 hover:border-gray-400 focus:outline-none") %>
@@ -109,7 +109,7 @@
                             </div>
 
                             <div class="border-t mt-6 pt-3"></div>
-                            <h2 class="italic text-sm md:text-lg mb-6 text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su certificación.</h2>    
+                            <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su certificación.</h2>    
                             
                             
                                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-red-400">
