Se corrige ruta de la card vacaciones hacia el formulario

--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -8,7 +8,7 @@
             </p>
         </div>
         <div class="bg-white py-8 px-10 text-center rounded-md shadow-lg transform -translate-y-20 sm:-translate-y-24 max-w-xs md:max-w-2xl lg:max-w-4xl xl:max-w-5xl mx-auto">
-            <h2 class="font-semibold text-2xl mb-6 text-red-500">Formulario de permisos</h2>        
+            <h2 class="font-semibold text-2xl mb-6 text-red-500">Formulario de certificado laboral</h2>        
                 <div class="bg-white shadow rounded-lg p-6 m-2">
                     <%= form_for :work do |f| %>
                         <div class="grid lg:grid-cols-1 gap-6 font-bold">
@@ -130,7 +130,7 @@
                                     <%= f.check_box :TiempoLaboral, class: "w-7 h-7" %>
                                 </div>
                             </div>
-                            
+
                         </div>
 
                         <div class="border-t mt-6 pt-3">
