--- a/app/views/permissions/new.html.erb
+++ b/app/views/permissions/new.html.erb
@@ -96,9 +96,9 @@
 
                             <div class="grid lg:grid-cols-2 gap-6">
                                 <%= f.label :FechaInicio, class: "bg-white text-red-400 px-1" %>
-                                <%= f.datetime_field :fechaInicio, class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-15 pl-5 pr-10 hover:border-gray-400 focus:outline-none" %>
+                                <%= f.datetime_field :fechaInicio, class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-10 pl-5 pr-10 hover:border-gray-400 focus:outline-none" %>
                                 <%= f.label :FechaFinal, class: "bg-white text-red-400 px-1" %>
-                                <%= f.datetime_field :fechaFinal, class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-15 pl-5 pr-10 hover:border-gray-400 focus:outline-none" %>
+                                <%= f.datetime_field :fechaFinal, class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-10 pl-5 pr-10 hover:border-gray-400 focus:outline-none" %>
                             </div>
 
                             <div class="border-t mt-6 pt-3"></div>
@@ -117,53 +117,29 @@
 
                             <div class="border-t pt-1"></div>
 
-                            <h2 class="text-left font-semibold text-sm md:text-lg mt-4 text-red-500">Diligencie tipo de permiso.</h2>
+                            <div class="grid md:grid-cols-1 gap 6">
 
-                            <div class="border-t pt-1"></div>
+                                <h2 class="text-left font-semibold text-sm md:text-lg mt-4 text-red-500">Diligencie tipo de permiso.</h2>
 
-                            <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su permiso.</h2>
+                                <div class="border-t pt-1"></div>
 
-                            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-red-400">
-                                <div class="flex justify-center">
-                                    <%= f.label :planificado, class: "mr-4" %>
-                                    <%= f.check_box :planificado, class: "w-7 h-7" %>
+                                <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su permiso.</h2>
+
+                                <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-red-400">
+                                    <%= select_tag(:permissions_id, options_for_select([['Planificado', 1], ['Extraordinario', 2], ['Empresa', 3]]), class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-10 pl-5 pr-10 hover:border-gray-400 focus:outline-none") %>
                                 </div>
-                                <div class="flex justify-center">
-                                    <%= f.label :Extraordinario, class: "mr-4" %>
-                                    <%= f.check_box :Extraordinario, class: "w-7 h-7" %>
-                                </div>
-                                <div class="flex justify-center">
-                                    <%= f.label :PorLAEmpresa, class: "mr-4" %>
-                                    <%= f.check_box :PorLAEmpresa, class: "w-7 h-7" %>
-                                </div>
-                            </div>
 
-                            <div class="border-t pt-1"></div>
+                                <h2 class="text-left font-semibold text-sm md:text-lg mt-4 text-red-500">Diligencie motivo de permiso.</h2>
 
-                            <h2 class="text-left font-semibold text-sm md:text-lg mt-4 text-red-500">Diligencie motivo de permiso.</h2>
+                                <div class="border-t pt-1"></div>
 
-                            <div class="border-t pt-1"></div>
+                                <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su permiso.</h2>
 
-                            <h2 class="text-left italic font-normal text-sm text-gray-400">Teniendo en cuenta su necesidad, seleccione las especificaciones con las cuales requiere su permiso.</h2>
-
-                            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-red-400">
-                                <div class="flex justify-center">
-                                    <%= f.label :CitaMedica, class: "mr-4" %>
-                                    <%= f.check_box :CitaMedica, class: "w-7 h-7" %>
-                                </div>
-                                <div class="flex justify-center">
-                                    <%= f.label :Personal, class: "mr-4" %>
-                                    <%= f.check_box :Personal, class: "w-7 h-7" %>
-                                </div>
-                                <div class="flex justify-center">
-                                    <%= f.label :Familiar, class: "mr-4" %>
-                                    <%= f.check_box :Familiar, class: "w-7 h-7" %>
-                                </div>
-                                <div class="flex justify-center">
-                                    <%= f.label :DiaFamilia, class: "mr-4" %>
-                                    <%= f.check_box :DiaFamilia, class: "w-7 h-7" %>
+                                <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-red-400">
+                                    <%= select_tag(:permissions_id, options_for_select([['Cita medica', 1], ['Personal', 2], ['Familiar', 3], ['Dia familia', 4]]), class: "filter drop-shadow-lg shadow-inner rounded text-red-400 cursor-pointer border border-gray-300 h-10 pl-5 pr-10 hover:border-gray-400 focus:outline-none") %>
                                 </div>
                             </div>
+
 
                         </div>
 
