Se crean las notificaciones flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,13 @@
   </head>
 
   <body>
+
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: name %>
+    <% end %>
+
     <%= yield %>
+
     <%= render "component/footer" %>
   </body>
 </html>
