--- a/app/views/type_vacations/index.html.erb
+++ b/app/views/type_vacations/index.html.erb
@@ -1,5 +1,26 @@
-<h1>Listando todo los tipos de vacaciones</h1>
-<% @typeVacation.each do |type| %>
-    <%= type.id %>
-    <%= type.description %>
-<% end %>
+<section class="text-gray-600 body-font bg-gray-200 bg-opacity-75 pb-40">
+    <div class="p-6 flex">
+        <h1 class="text-3xl">
+            Listado tipos de vacaciones
+        </h1>
+    </div>
+    <div class="px-3 py-4 flex justify-center">
+        <table class="w-9/12 text-md bg-white shadow-md rounded mb-4 table-auto">
+            <tbody>
+                <tr class="border-b">
+                    <th class="text-center p-3 px-5">Descripción</th>
+                    <th class="p-3 px-5 flex justify-end"><%= link_to "Agregar", new_type_vacation_path, class: "mr-3 text-sm bg-blue-500 hover:bg-blue-700 text-white py-1 px-2 rounded focus:outline-none focus:shadow-outline" %></th>
+                </tr>
+                <% @typeVacations.each do |typeVacation| %>
+                    <tr class="border-b hover:bg-orange-100 bg-gray-100">
+                        <td class="p-3 px-5"><%= typeVacation.description %></td>
+                        <td class="p-3 px-5 flex justify-end">
+                            <%= link_to "Editar", edit_type_vacation_path(typeVacation), class: "mr-3 text-sm bg-green-500 hover:bg-green-700 text-white py-1 px-2 rounded focus:outline-none focus:shadow-outline" %>
+                            <%= link_to "Eliminar", typeVacation, method: :delete, data: { confirm: "¿Estás seguro de eliminar este tipo de vacaciones?" }, class: "text-sm bg-red-500 hover:bg-red-700 text-white py-1 px-2 rounded focus:outline-none focus:shadow-outline" %>
+                        </td>
+                    </tr>
+                <% end %>
+            </tbody>
+        </table>
+    </div>
+</section>
