--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render "component/navbar"%>
 
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: name %>
