--- a/app/views/component/_navbar.html.erb
+++ b/app/views/component/_navbar.html.erb
@@ -8,6 +8,7 @@
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
       <%= link_to "Tipos Solicitudes", type_requests_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Solicitudes Vacaciones", holidays_path, class: "mr-5 text-red-700 hover:text-red-900" %>
       <%= link_to "Tipo Vacaciones", type_vacations_path, class: "mr-5 text-red-700 hover:text-red-900" %>
       <%= link_to "Motivo Permisos", reason_permissions_path, class: "mr-5 text-red-700 hover:red-gray-900" %>
       <%= link_to "Tipo Permisos", type_permissions_path, class: "mr-5 text-red-700 hover:text-red-900" %>
