Se cambian textos de las card, y se agrega boton para el fomulario nueva vacacion

--- a/app/views/cards/_cardhoras.html.erb
+++ b/app/views/cards/_cardhoras.html.erb
@@ -22,7 +22,7 @@
                     solo debes realizar seleccionar el botón de solicitud y completar la información requerida.
                 </p>
                 <%= link_to(times_new_url, class: "flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900") do %>
-                    <span>Solicitar certificado laboral</span>
+                    <span>Solicitar horas extras</span>
                     <span class="text-xs ml-1">&#x279c;</span>
                 <% end %>
             </div>
