--- a/app/views/cards/_cardpermisos.html.erb
+++ b/app/views/cards/_cardpermisos.html.erb
@@ -19,7 +19,7 @@
                 <h3 class="hidden md:block font-bold text-2xl text-gray-700">PERMISOS LABORALES</h3>
                 <p class="text-gray-600 text-justify"> Este espacio es donde podras tramitar tu carta laboral, podras especificar como la necesitas y generarla.</p>
                 <%= link_to(permissions_new_url, class: "flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900") do %>
-                    <span>Solicitar certificado laboral</span>
+                    <span>Solicitar permisos</span>
                     <span class="text-xs ml-1">&#x279c;</span>
                 <% end %>
             </div>
