--- a/app/views/cards/_cardvacaciones.html.erb
+++ b/app/views/cards/_cardvacaciones.html.erb
@@ -18,8 +18,8 @@
         <h4 class="hidden md:block text-xl text-gray-400">Tramitar</h4>
         <h3 class="hidden md:block font-bold text-2xl text-gray-700">VACACIONES</h3>
         <p class="text-gray-600 text-justify">Solicitar tus vacaciones jamás fue tan fácil como ahora, solo debes realizar click en el botón de solicitud y completar la información requerida.</p>
-        <%= link_to( new_holiday_path, class: "flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900") do %>
-          <span>Solicitar certificado laboral</span>
+        <%= link_to(new_holiday_path, class: "flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900") do %>
+          <span>Solicitar vacaciones</span>
           <span class="text-xs ml-1">&#x279c;</span>
         <% end %>
       </div>
