Se crea el crud de permission, formulario y vistas, se realizan validaciones adicionales

--- a/app/views/cards/_cardcarta.html.erb
+++ b/app/views/cards/_cardcarta.html.erb
@@ -21,7 +21,7 @@
           Ahora puedes solicitar tu certificado laboral de una manera más ágil y sencilla, solo debes realizar 
           click en el botón de solicitud y completar la información requerida.
         </p>
-        <%= link_to(works_new_url, class: "flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900") do %>
+        <%= link_to(new_certificate_url, class: "flex items-baseline mt-3 text-red-600 hover:text-red-900 focus:text-red-900") do %>
           <span>Solicitar certificado laboral</span>
           <span class="text-xs ml-1">&#x279c;</span>
         <% end %>
